--- a/style.css
+++ b/style.css
@@ -1,4 +1,83 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Prevent font size inflation */
+html {
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+
+/* Remove default margin in favour of better control in authored CSS */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin-block-end: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role="list"],
+ol[role="list"] {
+  list-style: none;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  line-height: 1.5;
+}
+
+/* Balance text wrapping on headings */
+h1,
+h2,
+h3,
+h4 {
+  text-wrap: balance;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+  color: currentColor;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font-family: inherit;
+  font-size: inherit;
+}
+
+/* Make sure textareas without a rows attribute are not tiny */
+textarea:not([rows]) {
+  min-height: 10em;
+}
+
+/* Anything that has been anchored to should have extra scroll margin */
+:target {
+  scroll-margin-block: 5ex;
+}
+
 :root {
   /* ===== Colors ===== */
   --purple-700: hsl(257, 40%, 49%);
@@ -52,32 +131,38 @@
   --tp-6-font: var(--fw-regular) 1.2rem / var(--lh-150) var(--font-poppins);
   --tp-6-ls: 0px;
 }
+* {
+  margin: 0;
+  padding: 0;
+}
 html {
   font-size: 62.5%;
-}
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
 }
 body {
   min-height: 100vh;
   background: var(--purple-700);
+  background-image: url(images/bg-mobile.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  color: white;
+  padding-inline: 3.6rem;
+}
+main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: white;
-}
-main {
-  width: 30.4rem;
-  margin: 4rem 3.5rem;
   position: relative;
 }
-.logo img {
+header {
+  margin-bottom: var(--spacing-800);
+  margin-top: var(--spacing-500);
+  align-self: flex-start;
+}
+header img {
   width: 12rem;
 }
-.logo {
-  margin-bottom: var(--spacing-800);
+.card {
+  margin-inline: auto;
 }
 .illustration {
   margin-bottom: var(--spacing-700);
@@ -85,11 +170,7 @@ main {
 .illustration img {
   width: 100%;
 }
-.hero-content {
-  display: flex;
-  flex-direction: column;
-  gap: var(--spacing-400);
-}
+
 .text-content {
   text-align: center;
   display: flex;
@@ -102,110 +183,103 @@ main {
 .text-content p {
   font: var(--tp-5-font);
 }
-button {
+.hero-content {
+  text-align: center;
+}
+.register {
+  display: inline-block;
+  margin-top: var(--spacing-400);
+  padding: 1.1rem 7.5rem;
+  border-radius: 2rem;
   color: var(--purple-700);
   border-radius: 2rem;
-  border-style: none;
   background: white;
   font: var(--tp-6-font);
-  width: 20rem;
-  height: 4rem;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
   box-shadow: 1px 3px 5px 0 rgba(0, 0, 0, 0.269);
   cursor: pointer;
 }
-button:hover {
+.register:hover {
   background: var(--magenta-400);
   color: white;
 }
 .social-media {
-  display: flex;
-  justify-content: center;
   width: 100%;
+  text-align: center;
   margin-top: 3rem;
-  gap: var(--spacing-200);
 }
 .social-media a {
-  text-decoration: none;
+  margin-inline: var(--spacing-100);
+  font-size: 15px;
 }
 .social-media i {
   color: white;
-  font-size: 2rem;
   border: 1px solid white;
-  width: 4rem;
-  height: 4rem;
+  width: 3rem;
+  height: 3rem;
   border-radius: 50%;
   display: inline-flex;
   justify-content: center;
   align-items: center;
 }
-.social-media a:hover i{
-    color: var(--magenta-400);
-    border-color: var(--magenta-400);
+.social-media a:hover i {
+  color: var(--magenta-400);
+  border-color: var(--magenta-400);
 }
 
-@media (min-width: 600px) {
-  main {
-    width: 60.8rem;
-  }
+@media (min-width: 480px) {
   .illustration {
     margin-bottom: var(--spacing-500);
   }
+  .text-content {
+    gap: var(--spacing-300);
+  }
   .text-content h1 {
-    font: var(--tp-1-font); /* Larger font for tablet/desktop */
+    font: var(--tp-1-font);
   }
   .text-content p {
     font: var(--tp-4-font);
   }
-  button {
-    width: 20rem;
-    height: 5.6rem;
-    border-radius: 2.8rem;
+  .register {
     font: var(--tp-3-font);
+    padding: 14.5px 63px;
+    border-radius: 2.8rem;
+    margin-top: var(--spacing-500);
+  }
+  .social-media a {
+    font-size: 24px;
+  }
+  .social-media a i {
+    width: 4rem;
+    height: 4rem;
   }
 }
-
-@media (min-width: 900px) {
-  main {
-    flex-direction: row;
-    /* width: 1272px; */
-    width: 88.5%;
+@media (min-width: 1024px) {
+  body {
+    background-image: url(images/bg-desktop.svg);
+    padding-inline: var(--spacing-700);
   }
-  .logo {
+  header {
     width: 20rem;
-    margin-bottom: 104px;
   }
-  .logo img {
+  header img {
     width: 100%;
   }
-  .illustration {
-    margin-bottom: 0;
-  }
-  .illustration img {
-    width: 69.6rem;
-  }
   .card {
-    height: 49.3rem;
-    display: flex;
-    gap: 5.6rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: var(--spacing-700);
+  }
+  .illustration {
+    grid-column: 1/2;
   }
   .hero-content {
+    grid-column: 2/3;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
   }
-  .text-content {
-    text-align: left;
-  }
-  button {
-    margin: 0;
-  }
   .social-media {
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 2.4rem;
+    text-align: right;
   }
 }
