--- a/style.css
+++ b/style.css
@@ -170,7 +170,6 @@ header img {
 .illustration img {
   width: 100%;
 }
-
 .text-content {
   text-align: center;
   display: flex;
@@ -257,6 +256,7 @@ header img {
 @media (min-width: 1024px) {
   body {
     background-image: url(images/bg-desktop.svg);
+    background-size: cover;
     padding-inline: var(--spacing-700);
   }
   header {
